--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@
   /* responsive */
   @media screen and (max-width: 800px) {
     .nav {
-      padding: 15px 100px;
+      padding: 5px 24px;
     }
   }
   
@@ -406,13 +406,14 @@
       position: fixed;
       top: 0;
       left: -100%;
-      height: 100%;
+      height: auto;
       max-width: 280px;
-      width: 100%;
-      padding-top: 100px;
+      width: 50%;
+      padding-top: 50px;
       row-gap: 30px;
       flex-direction: column;
-      background-color: #11101d;
+      background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
+      /* background-color: #11101d; */
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       transition: all 0.4s ease;
       z-index: 100;
