--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@
     height: 100%;
     padding: 0 15px;
     margin: 0 auto;
-    background-image: url('/resources/images/IMG/bg14.jpg');
+    /* background-image: url('/resources/images/IMG/bg14.jpg'); */
     background-size: cover;
     background-position: center;
     background-position: 100%;
@@ -443,7 +443,7 @@
     height: 100%;
     padding: 0 15px;
     margin: 0 auto;
-    background-image: url('/resources/images/IMG/bg13.jpg');
+    /* background-image: url('/resources/images/IMG/bg13.jpg'); */
     background-size: contain;
     background-position: center;
     background-position: 100%;
@@ -476,7 +476,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
-    background-image: url('/resources/images/IMG/bg7.jpg');
+    /* background-image: url('/resources/images/IMG/bg7.jpg'); */
     background-size: cover;
     background-position:center;
     background-position: 50%;
