--- a/pages/map.css
+++ b/pages/map.css
@@ -11,7 +11,8 @@
   z-index: 5000;
   background-color: transparent;
   cursor: pointer;
-  right: 0;
+  left: 94%;
+  right: 10%;
   top: 0;
   border-radius: 2px; 
   font-weight: 700;
@@ -25,8 +26,8 @@
 }
 
 .rotate-control img {
-  width: 50px; /* Adjust width as needed */
-  height: 50px; /* Adjust height as needed */
+  width: 38px; /* Adjust width as needed */
+  height: 38px; /* Adjust height as needed */
 }
 
 .rotate-control button:hover {
@@ -513,7 +514,7 @@
   width: 25px;
   height: 25px;
   right: 8px;
-  bottom: 10%;
+  bottom: 5%;
   border: none;
   padding: 0;
   margin: 0;
