--- a/pages/map.css
+++ b/pages/map.css
@@ -159,7 +159,7 @@
 
 .ol-popup {
   position: absolute;
-  background-color: white;
+  /* background-color: white; */
   box-shadow: 0 1px 4px rgba(0,0,0,0.2);
   padding: 15px;
   border-radius: 10px;
@@ -168,6 +168,10 @@
   left: -50px;
   min-width: 140px;
   height: auto;
+  background-color: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 .ol-popup:after, .ol-popup:before {
   top: 100%;
