--- a/pages/map.css
+++ b/pages/map.css
@@ -22,6 +22,9 @@
   align-items: center;
   justify-content: center;
   transition: background-color 0.3s ease;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .rotate-control img {
@@ -121,7 +124,6 @@
 
 #measurement-controls {
   position: absolute;
-  top: 2px;
   left: 2px;
   z-index: 10000;
 }
@@ -141,6 +143,9 @@
   margin: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 #measurement-controls button img {
@@ -437,7 +442,10 @@
   border: 2px solid rgb(18, 1, 1);
   border-radius: 5px;
   padding: 5px;
-  background-color: rgba(225, 225, 225, 0.6);
+  color: #fff;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  /* border: 1px solid rgba(255, 255, 255, 0.18); */
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: large;
 }
@@ -455,7 +463,9 @@
   border-radius: 5px;
   box-sizing: border-box;
   border: 2px solid rgb(18, 1, 1);
-  background-color: rgba(225, 225, 225, 0.6);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  /* border: 1px solid rgba(255, 255, 255, 0.18); */
   border-radius: 5px;
   transition: all 200ms ease;
   transform: translateX(-50%);
@@ -502,11 +512,15 @@
   margin-bottom:20px;
   width: 200px;
   cursor: pointer;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+
   /* border: 1px solid #000; */
 }
 
 .suggestion:hover {
-  background-color: #f0f0f0;
+  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
 }
 
 #btnCrosshair {
