--- a/pages/map.css
+++ b/pages/map.css
@@ -33,7 +33,7 @@
 }
 
 .rotate-control button:hover {
-  background-color: #f0f0f0; /* Add a hover effect if desired */
+  background-color: #f0f0f0; 
 }
 
 .rotate-animation {
@@ -47,79 +47,6 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.ol-print-to-scale {
-  position: absolute;
-  z-index: 5000;
-  background-color: transparent;
-  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
-  cursor: pointer;
-  right: 1%;
-  top: 1%;
-  border-radius: 2px; 
-  font-weight: 700;
-  text-align: center;
-  border: none;
-  display: flex;
-  height: 25px; 
-  width: 25px; 
-  margin: 5px;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.3s ease;
-}
-
-
-.ol-print-to-scale, .custom-fullscreen-control:hover {
-  background-color: #f0f0f0;
-}
-
-.custom-fullscreen-control{
-  background-color: #fff;
-  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
-  border: 1px #ccc;
-  padding: 5px;
-  cursor: pointer;
-  right: 8px;
-  top: 60%;
-  bottom: auto;
-  left: auto;
-  position: absolute;
-  z-index: 5000;
-}
-
-
-.zoom-to-extent{
-  background-color: #fff;
-  position: fixed;
-  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
-  padding: 5px;
-  cursor: pointer;
-  right: 8px;
-  top: 54%;
-}
-
-/* .zoom{
-  background-color: #fff;
-  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
-  border: 1px #ccc;
-  padding: 5px;
-  cursor: pointer;
-  right: 1%;
-  top: 75%;
-} */
-
-.edge-panel-toggle {
-  background-color: #3498db;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-}
-
-.edge-panel-toggle:hover {
-  background-color: #2980b9;
 }
 
 #measurement-controls {
@@ -164,7 +91,6 @@
 
 .ol-popup {
   position: absolute;
-  /* background-color: white; */
   box-shadow: 0 1px 4px rgba(0,0,0,0.2);
   padding: 15px;
   border-radius: 10px;
@@ -209,167 +135,6 @@
   content: "✖";
 }
 
-.myButton {
-  /* background-color: rgba(22, 85, 167, 0.6); */
-  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
-  color: white;
-  font-weight: 700;
-  text-align: center;
-  height: 25px;
-  width: 25px;
-  border-radius: 2px;
-  border: none;
-  align-items: center;
-  /* padding-top: 3px; */
-}
-
-.toolbarDiv {
-  position: absolute;
-  display: block;
-  /* margin: 10px auto auto 10px; */
-  right: 8px;
-  bottom: 16%;
-}
-
-.homeButtonDiv{
-  /* position: absolute; */
-  display: block;
-  /* margin: 10px auto auto 10px; */
-  /* top: 10px;
-  left: 10px; */
-}
-
-.fsButtonDiv {
-  /* position: absolute; */
-  display: block;
-  /* margin: 1px auto auto 10px; */
-}
-
-.myButton:hover {
-  background: rgba(22, 170, 35, 0.8);
-}
-
-.myButton.clicked {
-  background: rgba(22, 170, 35, 0.8);
-}
-
-.myButton.clicked:hover {
-  background-color: rgba(22, 170, 35, 1);
-}
-
-/* start : Measure styling */
-.ol-tooltip {
-  position: relative;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 4px;
-  color: white;
-  padding: 4px 8px;
-  opacity: 0.7;
-  white-space: nowrap;
-  font-size: 12px;
-}
-
-.ol-tooltip-measure {
-  opacity: 1;
-  font-weight: bold;
-}
-
-.ol-tooltip-static {
-  background-color: #fff;
-  color: black;
-  /* font-weight: bold; */
-  border: 4px solid white;
-}
-
-.ol-tooltip-measure:before,
-.ol-tooltip-static:before {
-  border-top: 6px solid rgba(0, 0, 0, 0.5);
-  border-right: 6px solid transparent;
-  border-left: 6px solid transparent;
-  content: "";
-  position: absolute;
-  bottom: -6px;
-  margin-left: -7px;
-  left: 50%;
-}
-
-.ol-tooltip-static:before {
-  border-top-color: rgb(232, 232, 239);
-}
-
-/* end : Measure styling */
-
-.ziButtonDiv {
-  position: relative;
-  display: block;
-  color: #0056b3;
-  margin: 1px auto auto 10px;
-}
-
-.zoButtonDiv {
-  position: relative;
-  display: block;
-  color: #0056b3;
-  margin: 1px auto auto 10px;
-}
-
-.myButtonDiv {
-  position: relative;
-  display: block;
-  /* margin: 1px auto auto 10px; */
-  padding-top: 3px;
-}
-
-.ol-dragbox {
-  border: 10px dashed grey;
-  background-color: rgba(200, 200, 200, 0.6);
-  /* background: linear-gradient(to bottom, #175d69 23%, #330c43 95%); */
-}
-
-.layersDiv {
-    position: absolute;
-    display: none;
-    margin: 65px auto auto 45px;
-    width: 250px;
-    background-color: rgba(18, 3, 3, 0.8);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1em;
-    line-height: 1.45;
-    border-radius: 2px;
-    border: 1px solid #d31919;
-    box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.5);
-    z-index: 1;
-  }
-
-  .layersDiv:empty{
-    display: none;
-  }
-  
-  /* .layer-switcher {
-    position: absolute;
-    color: #000;
-    top: 0px;
-    right: 0px;
-  }
-
-  .layer-switcher ul {
-    margin: 1em 0.4em;
-  } */
-
-
-/* #headerDiv{
-    background-color: midnightblue;
-    height: 35px;
-    margin: 0px 0px 10px 0px;
-  }
-  
-  #headerDiv label {
-  color: white;
-  margin: 10px;
-  font-weight: bold;
-  } */
-
-
 #bufferDistance {
   width: 100px;
 }
@@ -378,58 +143,6 @@
   width: 150px;
   margin: 0px auto 0px 20px;
   ;
-}
-
-.ol-scale-bar {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 8px;
-}
-
-.ol-scale-text {
-  font-size: 12px;
-}
-
-
-.myImg {
-  width: 15px;
-  height: 15px;
-  filter: brightness(0) invert(1);
-}
-
-.myButton .tooltiptext {
-  visibility: visible;
-  width: 120px;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  align-items: center;
-  border-radius: 5px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  /* bottom: 125%; */
-  left: 125%;
-  /* margin-left: -60px; */
-  opacity: 0;
-  transition: opacity 0.3s;
-  /* font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-  font-style: normal;
-}
-
-.myButton .tooltiptext::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: 100%;
-  margin-top: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: transparent #000 transparent transparent;
-}
-
-.myButton:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
 }
 
 .mousePosition {
@@ -444,7 +157,6 @@
   padding: 5px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  /* border: 1px solid rgba(255, 255, 255, 0.18); */
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: large;
 }
@@ -514,19 +226,16 @@
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.18);
-
-  /* border: 1px solid #000; */
 }
 
 .suggestion:hover {
   background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
 }
 
-#btnCrosshair {
+#livelocation {
   z-index: 2000;
   position: absolute;
   background-color: transparent;
-  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
   border-radius: 2px;
   width: 25px;
   height: 25px;
@@ -535,17 +244,15 @@
   border: none;
   padding: 0;
   margin: 0;
-  color: #fff;
 }
 
-#btnCrosshair.clicked {
+#livelocation.clicked {
   color: red;
 }
 
-#btnCrosshair:hover {
+#livelocation:hover {
   color: #fff;
 }
-
 
 /* MEASURE RESULT */
 #measurementResults {
