--- a/resources/layerswitcher/ol-layerswitcher.css
+++ b/resources/layerswitcher/ol-layerswitcher.css
@@ -1,15 +1,16 @@
 .layer-switcher {
   position: absolute;
   top: 3.5em;
-  right: 0.5em;
+  right: 0.3em;
   text-align: left;
 }
 
 .layer-switcher .panel {
   margin: 0;
-  border: 4px solid #eee;
-  border-radius: 4px;
-  background-color: white;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 2px;
+  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
+  color: #fff;
   display: none;
   max-height: inherit;
   height: 100%;
@@ -26,9 +27,13 @@
     /*logo.png*/;
   background-repeat: no-repeat;
   background-position: 2px;
-  background-color: white;
+  background-color: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
+  border-radius: 2px;
   color: black;
-  border: none;
+  transition: background-color 0.3s ease;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .layer-switcher button:focus,
