--- a/resources/v6.8.0-dist/ol.css
+++ b/resources/v6.8.0-dist/ol.css
@@ -262,7 +262,8 @@
   }
   
   .ol-zoomslider {
-    top: 7.5em;
+    z-index: 1000;
+    top: 8.5em;
     right: 0.5em;
     height: 200px;
   }
@@ -273,7 +274,8 @@
   }
   
   .ol-touch .ol-zoomslider {
-    top: 7.5em;
+    z-index: 1000;
+    top: 8.5em;
   }
   
   .ol-overviewmap {
